Fixed a11y contrast issue reported by Wave

--- a/view/frontend/web/css/source/base/_base.less
+++ b/view/frontend/web/css/source/base/_base.less
@@ -58,6 +58,9 @@
 
             &-wrapper {
                 position: relative;
+                &:has(.parent-category-over) {
+                    background: #8d8d8d; // a11y contrast fix
+                }
             }
 
             &-top {
